tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__YoureGonnaHateTh-AAAAAAAAAAAAAAAAAAADgA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 896,
  "prerequisites": [
    1867
  ],
  "properties": {
    "auto_claim": false,
    "desc": "An electric piston for your MV machines. The third item you're going to craft a lot of in the future.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lYou're Gonna Hate This in MV Too #3",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1867
  ],
  "rewards": [],
  "tasks": []
}
