tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__YoureGonnaHateTh-AAAAAAAAAAAAAAAAAAADgQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 897,
  "prerequisites": [
    896
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The fourth item you'll need a lot of in MV, which is still a pain to craft.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lYou're Gonna Hate This in MV Too #4",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    896
  ],
  "rewards": [],
  "tasks": []
}
